@@ -14,6 +14,7 @@ git-annex (5.20150813) UNRELEASED; urgency=medium
   * Avoid building the assistant on the hurd, since an inotify equivilant
     is not yet implemented in git-annex for the hurd.
   * importfeed --relaxed: Avoid hitting the urls of items in the feed.
+  * Fix reversion in init when ran as root, introduced in version 5.20150731.
 
  -- Joey Hess <id@joeyh.name>  Wed, 12 Aug 2015 14:31:01 -0400
 
